--- a/css/index.css
+++ b/css/index.css
@@ -38,3 +38,30 @@ a::before{
     background-color: #66F2E4;
     transform: scale(1.04);
 }
+
+.secao-titulo{
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+    background-color: #0D0D0D;
+}
+
+.secao-titulo>h1{
+    font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
+    font-weight: 500px;
+    text-decoration: none;
+    font-size: 48px;
+    color: #F2E635;
+    text-shadow: 4px 4px 0 #2393D9;
+    margin: 0px;
+}
+
+.secao-titulo>h2{
+    font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    text-decoration: none;
+    font-size: 30px;
+    margin: 20px 0 0 0;
+    color: #FFF;
+}
