--- a/css/components/subtitle.css
+++ b/css/components/subtitle.css
@@ -1,8 +1,7 @@
-h2{
+.subtitle{
     font-family: "Press Start 2P", Helvetica, sans-serif;
     font-weight: normal;
     text-decoration: none;
     font-size: 30px;
-    margin: 20px 0 0 0;
     color: #FFF;
 }
