--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,12 @@
 body{
+    font-family: Helvetica;
+}
+
+body, h1, h2, h3{
     margin: 0;
+}
+
+button{
+    border: none;
+    font-family: "Press Start 2P";
 }
