--- a/css/components/title.css
+++ b/css/components/title.css
@@ -7,3 +7,8 @@
     text-shadow: 4px 4px 0 #2393D9;
 }
 
+.title.-second{
+    color: #FFF;
+    text-shadow: 4px 4px 0 #0D0D0D;
+    text-align: center;
+}
